--- a/index.html
+++ b/index.html
@@ -25,8 +25,7 @@
                 Just here trying to figure it out.
             </p>
             <p>
-                Interested in regulation, compliance, & cybersecurity technology because something tells me there'll 
-                be more and not less regulation in the future. Studying for the CPA.
+                Interested in regulation, compliance, & cybersecurity technology. Studying for the CPA.
             </p>
             <p>
                 
