--- a/essays.html
+++ b/essays.html
@@ -18,20 +18,20 @@
     <div class="container">
         <div class="text animate">
             <h1>
-                <span id="greeting"></span> I&rsquo;m Douglas Lin.
+                <span id=></span> Thoughts
             </h1>
 
             <p>
-                Just here trying to figure it out.
+                
             </p>
             <p>
-                Interested in regulation, compliance, & cybersecurity technology. Studying for the CPA.
+                
             </p>
             <p>
 
             </p>
             <p>
-                Xp:
+                <!-- list -->
                 <ul>
                     <li>current risk intern @amazon</li>
                     <li>liquidity, credit, model risk intern @jpmchase</li>
