--- a/index.html
+++ b/index.html
@@ -31,7 +31,7 @@
                 
             </p>
             <p>
-                Xp: 
+                Experience: 
                 <ul>
                     <li>current risk intern @amazon</li>
                     <li>liquidity, credit, model risk intern @jpmchase</li>
