--- a/essay1.html
+++ b/essay1.html
@@ -3,7 +3,7 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Douglas Lin</title>
+    <title>Essay1: culture of us, japan, tsmc, fabs</title>
     <link href="https://fonts.googleapis.com/css?family=Libre+Franklin:300,400,600" rel="stylesheet">
     <link rel="stylesheet" type="text/css" href="style.css">
     <script>
@@ -22,19 +22,19 @@
             </h1>
 
             <p>
-                
+
             </p>
             <p>
-                
+
             </p>
             <p>
 
             </p>
             <p>
                 <!-- list -->
-		Essays
+		culture of us, japan, tsmc, fabs
                 <ul>
-                    <li><a href="https://dougylin.github.io/mywebsite/essays/essay1" target="_blank">culure of us, japan, tsmc, fabs</a></li>
+                    <li>           </li>
                 </ul>
             </p>
 
