--- a/index.html
+++ b/index.html
@@ -42,7 +42,7 @@
             </p>
             
             <p>
-                More stuff <a href="https://dougylin.github.io/mywebsite/essays.html" target="_blank">here</a>.
+                More stuff <a href="https://dougylin.github.io/mywebsite/essays" target="_blank">here</a>.
             </p>
         </div>
     </div>
