--- a/essays.html
+++ b/essays.html
@@ -34,7 +34,7 @@
                 <!-- list -->
 		Essays
                 <ul>
-                    <li><a href="https://dougylin.github.io/mywebsite/essays/essay1.html" target="_blank">culure of us, japan, tsmc, fabs</a></li>
+                    <li><a href="https://dougylin.github.io/mywebsite/essays.html/essay1.html" target="_blank">culure of us, japan, tsmc, fabs</a></li>
                 </ul>
             </p>
 
