--- a/essay1.html
+++ b/essay1.html
@@ -3,7 +3,7 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Essay1: culture of us, japan, tsmc, fabs</title>
+    <title>culture of us, japan, tsmc, fabs</title>
     <link href="https://fonts.googleapis.com/css?family=Libre+Franklin:300,400,600" rel="stylesheet">
     <link rel="stylesheet" type="text/css" href="style.css">
     <script>
@@ -15,32 +15,33 @@
     </script>
 </head>
 <body>
+
     <div class="container">
         <div class="text animate">
-            <h1>
-                <span id=></span>  <!-- bold header -->
-            </h1>
+            <h3>
+                <span id=></span>Observations on US TW Engineering Culture <!-- bold header -->
+            </h3>
 
             <p>
-
-            </p>
-            <p>
-
-            </p>
-            <p>
-
-            </p>
-            <p>
-                <!-- list -->
-		culture of us, japan, tsmc, fabs
-                <ul>
-                    <li>           </li>
-                </ul>
+		This essay is inspired by Intel's new process roadmap of 5 nodes in 4 years by 2025.
+		It made me think about can and should American's do leading edge wafer fab manufacturing?
             </p>
 
+	    <p>
+	    	Yes America can, but it will require another Sputnik moment. Semi's are a long term, continuous
+		investment. A one time $53B CHIPS Act is not enough when you consider 
+		<a href="https://www.asianometry.com/p/the-economics-of-tsmcs-giga-fabs" target="_blank">The Economics of TSMC's Giga-Fabs</a>.
+		American interest in reshoring semi manufacturing will require a lot of training. The German and Taiwanese
+		apprenticeship system is a model for how the next generation of semi process engineers should be grown at home. 
+
+	    </p>
+		
             <p>
-                substacks i like <a href="https://substack.com/@dougylin?utm_source=user-menu" target="_blank">here</a>.
+                Sources <a href="https://substack.com/@dougylin?utm_source=user-menu" target="_blank">here</a>.
             </p>
+
+
+
         </div>
     </div>
 
