--- a/essay1.html
+++ b/essay1.html
@@ -3,7 +3,7 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>culture of us, japan, tsmc, fabs</title>
+    <title>Chips, US, TSMC, Culture</title>
     <link href="https://fonts.googleapis.com/css?family=Libre+Franklin:300,400,600" rel="stylesheet">
     <link rel="stylesheet" type="text/css" href="style.css">
     <script>
@@ -19,7 +19,7 @@
     <div class="container">
         <div class="text animate">
             <h3>
-                <span id=></span>Observations on US TW Engineering Culture <!-- bold header -->
+                <span id=></span>Chips, US, TSMC, Culture <!-- bold header -->
             </h3>
 
             <p>
