--- a/essays.html
+++ b/essays.html
@@ -34,12 +34,20 @@
                 <!-- list -->
 		Essays
                 <ul>
-                    <li><a href="https://dougylin.github.io/mywebsite/essay1.html" target="_blank">culure of us, japan, tsmc, fabs</a></li>
+                    <li><a href="https://dougylin.github.io/mywebsite/essay1.html" target="_blank">Chips, US, TSMC, Culture</a></li>
+                </ul>
+		
+                <ul>
+                    <li><a href="https://dougylin.github.io/mywebsite/essay1.html" target="_blank">How I Would Design a Chip Apprenticeship Program</a></li>
+                </ul>
+		
+                <ul>
+                    <li><a href="https://dougylin.github.io/mywebsite/essay1.html" target="_blank">Notes Talking to a TSMC Process Integration Engineer</a></li>
                 </ul>
             </p>
 
             <p>
-                substacks i like <a href="https://substack.com/@dougylin?utm_source=user-menu" target="_blank">here</a>.
+                <a href="https://substack.com/@dougylin?utm_source=user-menu" target="_blank">Substack</a>.
             </p>
         </div>
     </div>
