--- a/essays.html
+++ b/essays.html
@@ -20,16 +20,6 @@
             <h1>
                 <span id=></span>  <!-- bold header -->
             </h1>
-
-            <p>
-                
-            </p>
-            <p>
-                
-            </p>
-            <p>
-
-            </p>
             <p>
                 <!-- list -->
 		Essays
@@ -38,16 +28,16 @@
                 </ul>
 		
                 <ul>
-                    <li><a href="https://dougylin.github.io/mywebsite/essay1.html" target="_blank">How I Would Design a Chip Apprenticeship Program</a></li>
+                    <li><a href="https://dougylin.github.io/mywebsite/essay2.html" target="_blank">How I Would Design a Chip Apprenticeship Program</a></li>
                 </ul>
 		
                 <ul>
-                    <li><a href="https://dougylin.github.io/mywebsite/essay1.html" target="_blank">Notes Talking to a TSMC Process Integration Engineer</a></li>
+                    <li><a href="https://dougylin.github.io/mywebsite/essay3.html" target="_blank">Notes Talking to a TSMC Process Integration Engineer</a></li>
                 </ul>
-            </p>
 
-            <p>
-                <a href="https://substack.com/@dougylin?utm_source=user-menu" target="_blank">Substack</a>.
+                <ul>
+                    <li><a href="https://dougylin.github.io/mywebsite/essay4.html" target="_blank">The Accounting Profession Is Stuck in the Shrinking Middle</a></li>
+                </ul>
             </p>
         </div>
     </div>
