--- a/essay4.html
+++ b/essay4.html
@@ -3,29 +3,17 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Chips, US, TSMC, Culture</title>
+    <title>The Accounting Profession is Stuck in the Shrinking Middle</title>
     <link href="https://fonts.googleapis.com/css?family=Libre+Franklin:300,400,600" rel="stylesheet">
     <link rel="stylesheet" type="text/css" href="style.css">
-    <script>
-        window.onload = function(){
-            var greetings = ['Hi', 'Hello', 'Hey'];
-            var idx = Math.floor(Math.random() * greetings.length);
-            document.getElementById('greeting').innerHTML += `${greetings[idx]}!`;
-        };
-    </script>
 </head>
 <body>
 
     <div class="container">
         <div class="text animate">
             <h3>
-                <span id=></span>Chips, US, TSMC, Culture <!-- bold header -->
+                <span id=></span>The Accounting Profession Is Stuck in the Shrinking Middle <!-- bold header -->
             </h3>
-
-
-            <p>
-                Sources <a href="https://substack.com/@dougylin?utm_source=user-menu" target="_blank">here</a>.
-            </p>
 
 	    <p>
     Dad:
