--- a/essays.html
+++ b/essays.html
@@ -28,7 +28,7 @@
                 </ul>
 		
                 <ul>
-                    <li><a href="https://dougylin.github.io/mywebsite/essay2.html" target="_blank">How I Would Design a Chip Apprenticeship Program</a></li>
+                    <li><a href="https://dougylin.github.io/mywebsite/essay2.html" target="_blank">How I Would Design a Hardware Apprenticeship Program</a></li>
                 </ul>
 		
                 <ul>
@@ -37,6 +37,10 @@
 
                 <ul>
                     <li><a href="https://dougylin.github.io/mywebsite/essay4.html" target="_blank">The Accounting Profession Is Stuck in the Shrinking Middle</a></li>
+                </ul>
+
+                <ul>
+                    <li><a href="https://dougylin.github.io/mywebsite/essay5.html" target="_blank">Risk, Risk, and More Risk at Banks</a></li>
                 </ul>
             </p>
         </div>
