--- a/essay5.html
+++ b/essay5.html
@@ -17,8 +17,8 @@
 
 	    <p>
 	    	TLDR: Banks hold your money and give you some interest. They try to make more money
-		with your money. Sometimes they lose the money. Then regulators create a bunch of
-		rules they have to follow, giving people like jobs. 
+		with your money. Sometimes they lose the money. Then regulators create rules and 
+		have people like me check that these banks are following the rules. 
 	    <p/>
 
 	    <p>
@@ -26,7 +26,9 @@
 	    <p/>
 
             <p>
-	    	<a href="https://dougylin.github.io/mywebsite/occ_summary.pdf" target="_blank">OCC Primer</a>.
+	    	The Office of the Comptroller of the Currency (OCC) pretty much set
+	    	<a href="https://dougylin.github.io/mywebsite/occ_summary.pdf" target="_blank"
+		>the rules</a>. 
             </p>
 
 	    <p>
