--- a/essays.html
+++ b/essays.html
@@ -42,6 +42,27 @@
                 <ul>
                     <li><a href="https://dougylin.github.io/mywebsite/essay5.html" target="_blank">Risk, Risk, and More Risk at Banks</a></li>
                 </ul>
+		
+                <ul>
+                    <li><a href="https://dougylin.github.io/mywebsite/essay6.html" target="_blank">Thoughts on Generational Policymaking Talent</a></li>
+                </ul>
+		
+                <ul>
+                    <li><a href="https://dougylin.github.io/mywebsite/essay7.html" target="_blank">Gripes on Asia's Teaching System</a></li>
+                </ul>
+		
+                <ul>
+                    <li><a href="https://dougylin.github.io/mywebsite/essay8.html" target="_blank">VC in Tapei</a></li>
+                </ul>
+
+                <ul>
+                    <li><a href="https://dougylin.github.io/mywebsite/essay9.html" target="_blank">Is Rolling Up Boomer Practices a Play?</a></li>
+                </ul>
+
+                <ul>
+                    <li><a href="https://dougylin.github.io/mywebsite/essay5.html" target="_blank">Risk, Risk, and More Risk at Banks</a></li>
+                </ul>
+
             </p>
         </div>
     </div>
