--- a/essays.html
+++ b/essays.html
@@ -52,15 +52,15 @@
                 </ul>
 		
                 <ul>
-                    <li><a href="https://dougylin.github.io/mywebsite/essay8.html" target="_blank">VC in Tapei</a></li>
+                    <li><a href="https://dougylin.github.io/mywebsite/essay8.html" target="_blank">Venture, Hardware, Software in Tapei</a></li>
                 </ul>
 
                 <ul>
-                    <li><a href="https://dougylin.github.io/mywebsite/essay9.html" target="_blank">Is Rolling Up Boomer Practices a Play?</a></li>
+                    <li><a href="https://dougylin.github.io/mywebsite/essay9.html" target="_blank">Rolling Up Retiring Practices</a></li>
                 </ul>
 
                 <ul>
-                    <li><a href="https://dougylin.github.io/mywebsite/essay5.html" target="_blank">Risk, Risk, and More Risk at Banks</a></li>
+                    <li><a href="https://dougylin.github.io/mywebsite/essay10.html" target="_blank">How I Would Build an International Import Export Firm in Today's Environment</a></li>
                 </ul>
 
             </p>
