--- a/essays.html
+++ b/essays.html
@@ -52,15 +52,15 @@
                 </ul>
 		
                 <ul>
-                    <li><a href="https://dougylin.github.io/mywebsite/essay8.html" target="_blank">Venture, Hardware, Software in Tapei</a></li>
+                    <li><a href="https://dougylin.github.io/mywebsite/essay8.html" target="_blank">Venture, Hardware, Software Observations in Taipei</a></li>
                 </ul>
 
                 <ul>
-                    <li><a href="https://dougylin.github.io/mywebsite/essay9.html" target="_blank">Rolling Up Retiring Practices</a></li>
+                    <li><a href="https://dougylin.github.io/mywebsite/essay9.html" target="_blank">Rolling Up Retiring Practices vs Building From Scratch</a></li>
                 </ul>
 
                 <ul>
-                    <li><a href="https://dougylin.github.io/mywebsite/essay10.html" target="_blank">How I Would Build an International Import Export Firm in Today's Environment</a></li>
+                    <li><a href="https://dougylin.github.io/mywebsite/essay10.html" target="_blank">International Import Export SMBs</a></li>
                 </ul>
 
             </p>
