--- a/index.html
+++ b/index.html
@@ -26,6 +26,7 @@
             </p>
             <p>
                 Interested in cybersecurity, compliance, and regulations. Studying for the CPA.
+		Experience with SOC, Basel, NIST, ISO, HIPPA, and Int/External Audit. 
             </p>
             <p>
                 
