--- a/index.html
+++ b/index.html
@@ -22,23 +22,15 @@
             </h1>
 
             <p>
-                
-            </p>
-            <p>
-                Interested in cybersecurity, compliance, and regulations. Taking the CPA Exams (1/4). 
-            </p>
-
-            <p>
-            	Regulation Compliance Experience: SOC 2+, NIST, HIPPA, ISO, Basel I-III. 
-            </p>
-
-	    <p>
-	    	Industries: Banking Risk and Compliance, Cloud Vendor Risk Management, 
-		Cybersecurity and Risk Management Controls in Public Accounting, Banking, Tech
+                Interested in cybersecurity, compliance, and regulations. Data security and 
+		policy will become more important this decade. Getting my CPA. 
+		Worked on SOC 2+, HIPPA, NIST, ISO, and Basel.
 	    <p/>
 
 	    <p>
-	    	Technical Experience: MERN, LAMP Stacks, AWS Site Deployment, GCP Data Pipeline, RestAPIs
+	    	Born in Burlingame SF. Grew up in San Gabriel Valley LA. College in Austin TX. 
+		Worked in New York and Taipei for a little bit. If I'm not playing basketball I'm 
+		probably reading or procrastinating by working on this site.
 	    <p/>
 
             <p>
