--- a/essays.html
+++ b/essays.html
@@ -24,43 +24,47 @@
                 <!-- list -->
 		Essays
                 <ul>
-                    <li><a href="https://dougylin.github.io/mywebsite/essay1.html" target="_blank">Chips, US, TSMC, Culture</a></li>
+                    <li><a href="https://dougylin.github.io/mywebsite/essay1.html" target="_self">Chips, US, TSMC, Culture</a></li>
                 </ul>
 		
                 <ul>
-                    <li><a href="https://dougylin.github.io/mywebsite/essay2.html" target="_blank">How I Would Design a Hardware Apprenticeship Program</a></li>
+                    <li><a href="https://dougylin.github.io/mywebsite/essay2.html" target="_self">How I Would Design a Hardware Apprenticeship Program</a></li>
                 </ul>
 		
                 <ul>
-                    <li><a href="https://dougylin.github.io/mywebsite/essay3.html" target="_blank">Notes Talking to a TSMC Process Integration Engineer</a></li>
+                    <li><a href="https://dougylin.github.io/mywebsite/essay3.html" target="_self">Notes Talking to a TSMC Process Integration Engineer</a></li>
                 </ul>
 
                 <ul>
-                    <li><a href="https://dougylin.github.io/mywebsite/essay4.html" target="_blank">The Accounting Profession Is Stuck in the Shrinking Middle</a></li>
+                    <li><a href="https://dougylin.github.io/mywebsite/essay4.html" target="_self">The Accounting Profession Is Stuck in the Shrinking Middle</a></li>
                 </ul>
 
                 <ul>
-                    <li><a href="https://dougylin.github.io/mywebsite/essay5.html" target="_blank">Risk, Risk, and More Risk at Banks</a></li>
+                    <li><a href="https://dougylin.github.io/mywebsite/essay5.html" target="_self">Risk, Risk, and More Risk at Banks</a></li>
                 </ul>
 		
                 <ul>
-                    <li><a href="https://dougylin.github.io/mywebsite/essay6.html" target="_blank">Thoughts on Generational Policymaking Talent</a></li>
+                    <li><a href="https://dougylin.github.io/mywebsite/essay6.html" target="_self">Thoughts on Generational Policymaking Talent</a></li>
                 </ul>
 		
                 <ul>
-                    <li><a href="https://dougylin.github.io/mywebsite/essay7.html" target="_blank">Gripes on Asia's Teaching System</a></li>
+                    <li><a href="https://dougylin.github.io/mywebsite/essay7.html" target="_self">Gripes on Asia's Teaching System</a></li>
                 </ul>
 		
                 <ul>
-                    <li><a href="https://dougylin.github.io/mywebsite/essay8.html" target="_blank">Venture, Hardware, Software Observations in Taipei</a></li>
+                    <li><a href="https://dougylin.github.io/mywebsite/essay8.html" target="_self">Venture, Hardware, Software Observations in Taipei</a></li>
                 </ul>
 
                 <ul>
-                    <li><a href="https://dougylin.github.io/mywebsite/essay9.html" target="_blank">Rolling Up Retiring Practices vs Building From Scratch</a></li>
+                    <li><a href="https://dougylin.github.io/mywebsite/essay9.html" target="_self">Rolling Up Retiring Practices vs Building From Scratch</a></li>
                 </ul>
 
                 <ul>
-                    <li><a href="https://dougylin.github.io/mywebsite/essay10.html" target="_blank">International Import Export SMBs</a></li>
+                    <li><a href="https://dougylin.github.io/mywebsite/essay10.html" target="_self">International Import Export SMBs</a></li>
+                </ul>
+
+                <ul>
+                    <li><a href="https://dougylin.github.io/mywebsite/essay11.html" target="_self">The Chinese Diaspora Experience</a></li>
                 </ul>
 
             </p>
