--- a/index.html
+++ b/index.html
@@ -45,7 +45,7 @@
             </p>
             
             <p>
-	    	<a href="https://dougylin.github.io/mywebsite/essays" target="_blank">Essays</a>
+	    	<a href="https://dougylin.github.io/mywebsite/essays" target="_self">Essays</a>
             </p>
         </div>
     </div>
