--- a/index.html
+++ b/index.html
@@ -22,9 +22,8 @@
             </h1>
 
             <p>
-                Interested in cybersecurity, compliance, and regulations. Data security and 
-		policy will become more important this decade. Getting my CPA. 
-		Worked on SOC 2+, HIPPA, NIST, ISO, and Basel.
+                Interested in cybersecurity, compliance, and regulations. Focused on data security, risk, and policy at
+		tech and finance firms. Getting my CPA. 
 	    <p/>
 
 	    <p>
