--- a/index.html
+++ b/index.html
@@ -44,7 +44,7 @@
             </p>
             
             <p>
-	    	<a href="https://dougylin.github.io/mywebsite/essays" target="_self">Essays</a>
+	    	<a href="https://dougylin.github.io/mywebsite/essays" target="">Essays</a>
             </p>
         </div>
     </div>
