--- a/index.html
+++ b/index.html
@@ -27,8 +27,8 @@
 	    <p/>
 
 	    <p>
-	    	Born in Burlingame SF. Grew up in San Gabriel Valley LA. College in Austin TX. 
-		Worked in New York and Taipei for a little bit. If I'm not playing basketball I'm 
+	    	A little about me: I was born in SF, grew up in LA, and went to college at UT Austin. 
+		I worked in New York and Taipei for a little bit and if I'm not playing basketball I'm 
 		probably reading or procrastinating by working on this site.
 	    <p/>
 
