--- a/index.html
+++ b/index.html
@@ -27,19 +27,18 @@
 	    <p/>
 
 	    <p>
-	    	A little about me: I was born in SF, grew up in LA, and went to college at UT Austin. 
-		I worked in New York and Taipei for a little bit and if I'm not playing basketball I'm 
-		probably reading or procrastinating by working on this site.
+	    	A little about me: I was born in San Francisco, grew up in Los Angeles, and spent undergrad at Austin. 
+		If I'm not playing basketball I'm reading or spending time on this site.
 	    <p/>
 
             <p>
                 Work Experience: 
                 <ul>
-                    <li>Current Risk Specialist     @Amazon</li>
-                    <li>Risk Management             @JPMorgan Chase</li>
-                    <li>Hardware VC Analyst         @Mosaic Venture Lab</li>
-                    <li>Frontend and PM             @Clips.AI</li>
-                    <li>IT Auditor                  @Armanino</li>
+                    <li>Currently a Risk Specialist        at Amazon, Seattle, WA</li>
+                    <li>Risk Management Intern             at JPMorgan Chase New York, NY</li>
+                    <li>Hardware VC Analyst                at Mosaic Venture Lab Taipei, TW</li>
+                    <li>Frontend and PM                    at Clips.AI Austin, TX</li>
+                    <li>IT Auditor Intern                  at Armanino Austin, TX</li>
                 </ul>
             </p>
             
