--- a/index.html
+++ b/index.html
@@ -22,8 +22,8 @@
             </h1>
 
             <p>
-                Interested in cybersecurity, compliance, and regulations. Focused on data security, risk, and policy at
-		tech and finance firms. Getting my CPA. 
+                Interested in all the boring stuff: regulations, compliance, and risk management. Getting my CPA and MS
+		in cybersecurity at Georgia Tech.
 	    <p/>
 
 	    <p>
@@ -32,13 +32,13 @@
 	    <p/>
 
             <p>
-                Work Experience: 
+                Experience: 
                 <ul>
-                    <li>Currently a Risk Specialist        at Amazon, Seattle, WA</li>
-                    <li>Risk Management Intern             at JPMorgan Chase New York, NY</li>
-                    <li>Hardware VC Analyst                at Mosaic Venture Lab Taipei, TW</li>
-                    <li>Frontend and PM                    at Clips.AI Austin, TX</li>
-                    <li>IT Auditor Intern                  at Armanino Austin, TX</li>
+                    <li>Current Risk Specialist            @ Amazon, Seattle, WA</li>
+                    <li>Risk Management Intern             @ JPMorgan Chase New York, NY</li>
+                    <li>Hardware VC Analyst                @ Mosaic Venture Lab Taipei, TW</li>
+                    <li>Frontend and PM                    @ Clips.AI Austin, TX</li>
+                    <li>IT Auditor Intern                  @ Armanino Austin, TX</li>
                 </ul>
             </p>
             
