--- a/index.html
+++ b/index.html
@@ -27,23 +27,25 @@
 	    <p/>
 
 	    <p>
-	    	A little about me: I was born in San Francisco, grew up in Los Angeles, and spent undergrad at Austin. 
+	    	A little about me: I was born in San Francisco, grew up in Los Angeles, and did college in Austin--hook'em. 
 		If I'm not playing basketball I'm reading or spending time on this site.
 	    <p/>
 
             <p>
                 Experience: 
                 <ul>
-                    <li>Current Risk Specialist            @ Amazon, Seattle, WA</li>
-                    <li>Risk Management Intern             @ JPMorgan Chase New York, NY</li>
-                    <li>Hardware VC Analyst                @ Mosaic Venture Lab Taipei, TW</li>
-                    <li>Frontend and PM                    @ Clips.AI Austin, TX</li>
-                    <li>IT Auditor Intern                  @ Armanino Austin, TX</li>
+                    <li>Current Risk Specialist            @ Amazon</li>
+                    <li>Risk Management Intern             @ JPMorgan Chase</li>
+                    <li>Hardware VC Analyst                @ Mosaic Venture Lab</li>
+                    <li>Frontend and PM                    @ Clips.AI</li>
+                    <li>IT Auditor Intern                  @ Armanino</li>
                 </ul>
             </p>
             
             <p>
-	    	<a href="https://dougylin.github.io/mywebsite/essays" target="">Essays</a>
+	    	<a href="https://dougylin.github.io/mywebsite/essays" target="">Notes</a>
+				
+	    	<a href="https://www.linkedin.com/in/douglaslin0723/" target="">LinkedIn</a>
             </p>
         </div>
     </div>
