--- a/index.html
+++ b/index.html
@@ -32,15 +32,12 @@
 	    <p/>
 
             <p>
-                Experience: 
-                <ul>
-                    <li>Current Risk Specialist            @ Amazon</li>
-                    <li>Risk Management Intern             @ JPMorgan Chase</li>
-                    <li>Hardware VC Analyst                @ Mosaic Venture Lab</li>
-                    <li>Frontend and PM                    @ Clips.AI</li>
-                    <li>IT Auditor Intern                  @ Armanino</li>
+	    	Experience:
+                 <ul>
+                  <li><a href="https://www.linkedin.com/in/douglaslin0723/" target="">LinkedIn</a></li>
                 </ul>
-            </p>
+	   </p>
+
             
             <p>
 	    	<a href="https://dougylin.github.io/mywebsite/essays" target="">Notes</a>
