--- a/index.html
+++ b/index.html
@@ -32,10 +32,8 @@
 	    <p/>
 
             <p>
-	    	Experience:
-                 <ul>
-                  <li><a href="https://www.linkedin.com/in/douglaslin0723/" target="">LinkedIn</a></li>
-                </ul>
+	    	Experience: 
+	    	<a href="https://www.linkedin.com/in/douglaslin0723/" target="">LinkedIn</a>
 	   </p>
 
             
