--- a/index.html
+++ b/index.html
@@ -36,11 +36,14 @@
 	    	<a href="https://www.linkedin.com/in/douglaslin0723/" target="">LinkedIn</a>
 	   </p>
 
+            <p>
+	    	Following: 
+	    	<a href="https://substack.com/@dougylin?utm_source=user-menu" target="">Substack</a>
+	   </p>
             
             <p>
+	        Thoughts: 
 	    	<a href="https://dougylin.github.io/mywebsite/essays" target="">Notes</a>
-				
-	    	<a href="https://www.linkedin.com/in/douglaslin0723/" target="">LinkedIn</a>
             </p>
         </div>
     </div>
