--- a/index.html
+++ b/index.html
@@ -37,14 +37,15 @@
 	   </p>
 
             <p>
-	    	Following: 
-	    	<a href="https://substack.com/@dougylin?utm_source=user-menu" target="">Substack</a>
-	   </p>
-            
+	        Substack Writing: 
+	    	<a href="https://dougylin.substack.com/" target="">Notes</a>
+            </p>
+
             <p>
 	        Thoughts: 
 	    	<a href="https://dougylin.github.io/mywebsite/essays" target="">Notes</a>
             </p>
+
         </div>
     </div>
 
