--- a/index.html
+++ b/index.html
@@ -37,8 +37,8 @@
 	   </p>
 
             <p>
-	        Substack Writing: 
-	    	<a href="https://dougylin.substack.com/" target="">Notes</a>
+	        Writing: 
+	    	<a href="https://dougylin.substack.com/" target="">Substack</a>
             </p>
 
             <p>
