--- a/index.html
+++ b/index.html
@@ -27,7 +27,7 @@
 	    <p/>
 
 	    <p>
-	    	A little about me: I was born in San Francisco, grew up in Los Angeles, and did college in Austin--hook'em. 
+	    	A little about me: I was born in San Francisco, grew up in Los Angeles, and sutdied in Austin——hook'em. 
 		If I'm not playing basketball I'm reading or spending time on this site.
 	    <p/>
 
@@ -40,11 +40,12 @@
 	        Writing: 
 	    	<a href="https://dougylin.substack.com/" target="">Substack</a>
             </p>
-
+<!--
             <p>
 	        Thoughts: 
 	    	<a href="https://dougylin.github.io/mywebsite/essays" target="">Notes</a>
             </p>
+-->
 
         </div>
     </div>
