--- a/index.html
+++ b/index.html
@@ -8,7 +8,7 @@
     <link rel="stylesheet" type="text/css" href="style.css">
     <script>
         window.onload = function(){
-            var greetings = ['Hi', 'Hello', 'Hey', 'Howdy', 'Welcome'];
+            var greetings = ['Hi', 'Hello', 'Hey', 'Howdy', 'Welcome', 你好];
             var idx = Math.floor(Math.random() * greetings.length);
             document.getElementById('greeting').innerHTML += `${greetings[idx]}!`;
         };
@@ -22,13 +22,13 @@
             </h1>
 
             <p>
-                Interested in all the boring stuff: regulations, compliance, and risk management. Getting my CPA and MS
-		in cybersecurity at Georgia Tech.
+                In regulation, compliance, and risk management. Covered financial services, banks, startups, venture capital, bigtech.
+		Pursing MS in cybersecurity at Georgia Tech and the CPA.
 	    <p/>
 
 	    <p>
-	    	A little about me: I was born in San Francisco, grew up in Los Angeles, and sutdied in Austin——hook'em. 
-		If I'm not playing basketball I'm reading or spending time on this site.
+	    	A little about me: I was born in San Francisco, grew up in Los Angeles, and studied in Austin——hook'em. 
+		If I'm not playing basketball I'm reading or trying to write more.
 	    <p/>
 
             <p>
