--- a/index.html
+++ b/index.html
@@ -27,7 +27,7 @@
 	    <p/>
 
 	    <p>
-	    	A little about me: I was born in San Francisco, grew up in Los Angeles, and studied in Austin——hook'em. 
+	    	A little about me: I was born in San Francisco, grew up in Los Angeles, and studied in Austin—hook'em. 
 		If I'm not playing basketball I'm reading or trying to write more.
 	    <p/>
 
@@ -40,6 +40,12 @@
 	        Writing: 
 	    	<a href="https://dougylin.substack.com/" target="">Substack</a>
             </p>
+
+            <p>
+	    	Projects: 
+	    	<a href="https://" target="">TBD</a>
+	   </p>
+
 <!--
             <p>
 	        Thoughts: 
