--- a/index.html
+++ b/index.html
@@ -22,13 +22,14 @@
             </h1>
 
             <p>
-                In regulation, compliance, and risk management. Covered financial services, banks, startups, venture capital, bigtech.
+                Doing regulation, compliance, and risk management work at Amazon.
+		Prior experience at financial service, bank, startup, venture capital, and bigtech. 
 		Pursing MS in cybersecurity at Georgia Tech and the CPA.
 	    <p/>
 
 	    <p>
-	    	A little about me: I was born in San Francisco, grew up in Los Angeles, and studied in Austin—hook'em. 
-		If I'm not playing basketball I'm reading or trying to write more.
+	    	A little about me: I was born in San Francisco, grew up in Los Angeles, and studied in Austin (hook'em). 
+		If I'm not playing basketball I'm trying to read and write more.
 	    <p/>
 
             <p>
