--- a/index.html
+++ b/index.html
@@ -24,12 +24,12 @@
             <p>
                 Doing regulation, compliance, and risk management work at Amazon.
 		Prior experience at financial service, bank, startup, venture capital, and bigtech. 
-		Pursing MS in cybersecurity at Georgia Tech and the CPA.
+		Doing a MS in Cybersecurity at Georgia Tech and the CPA.
 	    <p/>
 
 	    <p>
-	    	A little about me: I was born in San Francisco, grew up in Los Angeles, and studied in Austin (hook'em). 
-		If I'm not playing basketball I'm trying to read and write more.
+	    	A little about me: I was born in San Francisco, grew up in Los Angeles, and studied in Austin. 
+		If I'm not playing basketball I'm (trying) to read and write more.
 	    <p/>
 
             <p>
