--- a/index.html
+++ b/index.html
@@ -29,7 +29,7 @@
 
 	    <p>
 	    	A little about me: I was born in San Francisco, grew up in Los Angeles, and studied in Austin. 
-		If I'm not playing basketball I'm (trying) to read and write more.
+		Trying to read and write more.
 	    <p/>
 
             <p>
