--- a/index.html
+++ b/index.html
@@ -44,7 +44,7 @@
 
             <p>
 	    	Projects: 
-	    	<a href="https://" target="">TBD</a>
+	    	<a href="https://" target="">tbd</a>
 	   </p>
 
 <!--
