--- a/index.html
+++ b/index.html
@@ -22,37 +22,37 @@
             </h1>
 
             <p>
-                Doing regulation, compliance, and risk management work at Amazon.
-		Prior experience at financial service, bank, startup, venture capital, and bigtech. 
-		Doing a MS in Cybersecurity at Georgia Tech and the CPA.
+                Working in regulation, compliance, and risk management at Amazon.
+		Prior experience at financial service, bank, startup, venture capital, and bigtech co's. 
+		Pursuing a MS in Cybersecurity at Georgia Tech plus the CPA.
 	    <p/>
 
 	    <p>
-	    	A little about me: I was born in San Francisco, grew up in Los Angeles, and studied in Austin. 
-		Trying to read and write more.
+	    	About me: I was born in San Francisco, grew up in Los Angeles, studied in Austin, now in Seattle. 
+		Trying to read and work on this site more. 
 	    <p/>
-
+<!--
             <p>
 	    	Experience: 
 	    	<a href="https://www.linkedin.com/in/douglaslin0723/" target="">LinkedIn</a>
 	   </p>
+
 
             <p>
 	        Writing: 
 	    	<a href="https://dougylin.substack.com/" target="">Substack</a>
             </p>
 
+
             <p>
 	    	Projects: 
 	    	<a href="https://" target="">tbd</a>
 	   </p>
-
-<!--
+-->
             <p>
-	        Thoughts: 
+	        Work in Projects: 
 	    	<a href="https://dougylin.github.io/mywebsite/essays" target="">Notes</a>
             </p>
--->
 
         </div>
     </div>
