--- a/index.html
+++ b/index.html
@@ -22,13 +22,12 @@
             </h1>
 
             <p>
-                Working in regulation, compliance, and risk management at Amazon.
-		Prior experience at financial service, bank, startup, venture capital, and bigtech co's. 
-		Pursuing a MS in Cybersecurity at Georgia Tech plus the CPA.
+                Working in regulation, compliance, and risk management.
+		Prior experience at financial service, bank, startup, venture capital, and bigtech co's.
 	    <p/>
 
 	    <p>
-	    	About me: I was born in San Francisco, grew up in Los Angeles, studied in Austin, now in Seattle. 
+	    	About me: I was born in San Francisco, grew up in Los Angeles, undergrad in Austin, working in Seattle. 
 		Trying to read and work on this site more. 
 	    <p/>
 <!--
