--- a/essays.html
+++ b/essays.html
@@ -66,6 +66,10 @@
                 <ul>
                     <li><a href="https://dougylin.github.io/mywebsite/essay11.html" target="_self">The Chinese Diaspora Experience</a></li>
                 </ul>
+		
+		Payments Project
+
+                <li><a href="https://dougylin.github.io/mywebsite/NEWSITEHERE" target="_self">Here</a></li>
 
             </p>
         </div>
