--- a/essays.html
+++ b/essays.html
@@ -22,7 +22,7 @@
             </h1>
             <p>
                 <!-- list -->
-		Essays
+		Thoughts
                 <ul>
                     <li><a href="https://dougylin.github.io/mywebsite/essay1.html" target="_self">Chips, US, TSMC, Culture</a></li>
                 </ul>
@@ -67,7 +67,7 @@
                     <li><a href="https://dougylin.github.io/mywebsite/essay11.html" target="_self">The Chinese Diaspora Experience</a></li>
                 </ul>
 		
-		Payments Project <a href="https://dougylin.github.io/mywebsite/NEWSITEHERE" target="_self">Here</a>
+		Payments Project: <a href="https://dougylin.github.io/mywebsite/NEWSITEHERE" target="_self">Here</a>
 
             </p>
         </div>
