--- a/index.html
+++ b/index.html
@@ -22,13 +22,15 @@
             </h1>
 
             <p>
-                Working in regulation, compliance, and risk management.
-		Prior experience at financial service, bank, startup, venture capital, and bigtech co's.
+		Working in regulation, compliance, and risk management with experience at
+		financial services, banks, startups, venture capital, and big tech companies.
 	    <p/>
 
 	    <p>
-	    	About me: I was born in San Francisco, grew up in Los Angeles, undergrad in Austin, working in Seattle. 
-		Trying to read and work on this site more. 
+		About me: Born in San Francisco, raised in Los Angeles, did my undergrad in Austin, 
+		now working in Seattle.
+		Trying to read and contribute more here.
+
 	    <p/>
 <!--
             <p>
