--- a/essays.html
+++ b/essays.html
@@ -67,7 +67,7 @@
                     <li><a href="https://dougylin.github.io/mywebsite/essay11.html" target="_self">The Chinese Diaspora Experience</a></li>
                 </ul>
 		
-		Payments Project: <a href="https://dougylin.github.io/mywebsite/NEWSITEHERE" target="_self">Here</a>
+		Future  Projects: <a href="https://dougylin.github.io/mywebsite/NEWSITEHERE" target="_self">Here</a>
 
             </p>
         </div>
