--- a/index.html
+++ b/index.html
@@ -23,7 +23,7 @@
 
             <p>
 		Working in regulation, compliance, and risk management with experience at
-		financial services, banks, startups, venture capital, and big tech companies.
+		financial services, banks, startups, venture capital, and big tech companies. TESTING!
 	    <p/>
 
 	    <p>
