--- a/index.html
+++ b/index.html
@@ -23,14 +23,15 @@
 
             <p>
 		Working in regulation, compliance, and risk management with experience at
-		financial services, banks, startups, venture capital, and big tech companies.
+		financial service, bank, startup, venture capital, and big tech companies.
+		Basically a white collar plumber.
 	    <p/>
 
 	    <p>
-		About me: Born in San Francisco, raised in Los Angeles, did my undergrad in Austin, 
-		now working in Seattle.
-		Trying to read and contribute more here.
-
+		About me: Born in San Francisco, raised in Los Angeles, studied in Austin, 
+		did a stint in New York and Taipei, now working in Seattle. Anything related to 
+		technology, business, law, soft-sciences, or policy I'd love to listen to. 
+		So feel free to hmu at douglaslin0723@gmail.com or LinkedIn. 
 	    <p/>
 <!--
             <p>
