--- a/index.html
+++ b/index.html
@@ -24,22 +24,24 @@
             <p>
 		Working in regulation, compliance, and risk management with experience at
 		financial service, bank, startup, venture capital, and big tech companies.
-		Basically a white collar plumber.
 	    <p/>
 
 	    <p>
 		About me: Born in San Francisco, raised in Los Angeles, studied in Austin, 
-		did a stint in New York and Taipei, now working in Seattle. Anything related to 
-		technology, business, law, soft-sciences, or policy I'd love to listen to. 
-		So feel free to hmu at douglaslin0723@gmail.com or LinkedIn. 
+		did a stint in New York and Taipei, now working in Seattle. Love to hear
+		your thoughts on technology, business, law, soft-sciences, or policy at 
 	    <p/>
-<!--
-            <p>
-	    	Experience: 
+	    
+	    <p>
+	    	douglaslin0723@gmail.com 
+	    <p/>
+
+            <p> 
 	    	<a href="https://www.linkedin.com/in/douglaslin0723/" target="">LinkedIn</a>
 	   </p>
 
 
+<!--
             <p>
 	        Writing: 
 	    	<a href="https://dougylin.substack.com/" target="">Substack</a>
