--- a/index.html
+++ b/index.html
@@ -29,7 +29,7 @@
 	    <p>
 		About me: Born in San Francisco, raised in Los Angeles, studied in Austin, 
 		did a stint in New York and Taipei, now working in Seattle. Love to hear
-		your thoughts on technology, business, law, soft-sciences, or policy at 
+		your thoughts on technology, business, law, soft-sciences, or policy at: 
 	    <p/>
 	    
 	    <p>
